@@ -16,6 +16,13 @@ my %RUN_DEPS = (
 ##{ ($plugin->get_default('PREREQ_PM') =~ /^[^\n]*\n(.+)\n[^\n]+$/s)[0] ##}
 );
 
+my %OPT_RUN_DEPS = (can_xs() ? (
+  'Variable::Magic' => '0.48', # when changing, also change it in B::Hooks::EndOfScope::XS
+
+  # make sure we smoke the pure-perl version fallback
+  is_smoker() ? ( 'Devel::Hide' => '0.0007' ) : (),
+) : () );
+
 my %WriteMakefileArgs = (
   "NAME" => "B::Hooks::EndOfScope",
   "ABSTRACT" => "Execute code after a scope finished compilation",
@@ -30,7 +37,7 @@ my %WriteMakefileArgs = (
 ##{ $plugin->get_default('CONFIGURE_REQUIRES') ##}
 
   "PREREQ_PM" => {
-    %RUN_DEPS,
+    %RUN_DEPS, %OPT_RUN_DEPS,
     $mymeta_works ? () : (%BUILD_DEPS),
   },
 
@@ -70,3 +77,53 @@ delete $WriteMakefileArgs{CONFIGURE_REQUIRES}
   unless eval { ExtUtils::MakeMaker->VERSION('6.52') };
 
 WriteMakefile(%WriteMakefileArgs);
+
+# Secondary compile testing via ExtUtils::CBuilder
+sub can_xs {
+  # Do we have the configure_requires checker?
+  local $@;
+  eval "require ExtUtils::CBuilder;";
+  if (! $@ ) {
+    # They don't obey configure_requires, so it is
+    # someone old and delicate. Try to avoid hurting
+    # them by falling back to an older simpler test.
+    return can_cc();
+  }
+
+  return ExtUtils::CBuilder->new( quiet => 1 )->have_compiler;
+}
+
+# can we locate a (the) C compiler
+sub can_cc {
+  my @chunks = split(/ /, $Config::Config{cc}) or return;
+
+  # $Config{cc} may contain args; try to find out the program part
+  while (@chunks) {
+    return can_run("@chunks") || (pop(@chunks), next);
+  }
+
+  return;
+}
+
+# check if we can run some command
+sub can_run {
+  my ($cmd) = @_;
+
+  return $cmd if -x $cmd;
+  if (my $found_cmd = MM->maybe_command($cmd)) {
+    return $found_cmd;
+  }
+
+  for my $dir ((split /$Config::Config{path_sep}/, $ENV{PATH}), '.') {
+    next if $dir eq '';
+    my $abs = File::Spec->catfile($dir, $cmd);
+    return $abs if (-x $abs or $abs = MM->maybe_command($abs));
+  }
+
+  return;
+}
+
+# is this a smoker?
+sub is_smoker {
+  return ( $ENV{AUTOMATED_TESTING} && ! $ENV{RELEASE_TESTING} )
+}
