@@ -1,3 +1,9 @@
+  * Complete pure-perl implementation in addition to the one based on
+    Variable::Magic. You can specify the implementation explicitly by
+    use-ing B::Hooks::EndOfScope::PP or B::Hooks::EndOfScope::XS, or
+    by setting $ENV{B_HOOKS_ENDOFSCOPE_IMPLEMENTATION} to either 'XS'
+    or 'PP'
+
 0.11  Thu, 23 Feb 2012 11:19:18 +0100
   * A minor efficiency improvement.
 
